--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "naive-ui": "^2.39.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
@@ -19,6 +20,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "sass": "^1.78.0",
-    "tailwindcss": "^3.4.11"
+    "tailwindcss": "^3.4.11",
+    "unplugin-vue-components": "^0.27.4"
   }
 }
